--- a/lib/protocol_builder_web/templates/layout/app.html.eex
+++ b/lib/protocol_builder_web/templates/layout/app.html.eex
@@ -4,23 +4,23 @@
     <meta charset="utf-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>ProtocolBuilder · Phoenix Framework</title>
+    <title>Pieteikumu būvētājs. Pilsēta cilvēkiem</title>
     <link rel="stylesheet" href="<%= Routes.static_path(@conn, "/css/app.css") %>"/>
   </head>
   <body>
-    <header>
-      <section class="container">
-        <nav role="navigation">
-          <ul>
-            <li><a href="https://hexdocs.pm/phoenix/overview.html">Get Started</a></li>
-          </ul>
-        </nav>
-        <a href="http://phoenixframework.org/" class="phx-logo">
-          <img src="<%= Routes.static_path(@conn, "/images/phoenix.png") %>" alt="Phoenix Framework Logo"/>
-        </a>
+    <header class="container-fluid">
+      <section class="row align-middle">
+        <div class="col" style="max-width: 200px">
+          <a href="https://pilsetacilvekiem.lv">
+            <img src="https://pilsetacilvekiem.lv/wp-content/uploads/2018/10/pc-header-logo-retina.png" alt="Pilsēta cilvēkiem">
+          </a>
+        </div>
+        <div class="col">
+          <h1>Pārkāpumu iesniegumu būvētājs</h1>
+        </div>
       </section>
     </header>
-    <main role="main" class="container">
+    <main role="main" class="container-fluid">
       <p class="alert alert-info" role="alert"><%= get_flash(@conn, :info) %></p>
       <p class="alert alert-danger" role="alert"><%= get_flash(@conn, :error) %></p>
       <%= render @view_module, @view_template, assigns %>
