--- a/lib/protocol_builder_web/templates/layout/app.html.eex
+++ b/lib/protocol_builder_web/templates/layout/app.html.eex
@@ -9,20 +9,18 @@
   </head>
   <body>
     <header class="container-fluid">
-      <section class="row align-middle">
+      <section class="row">
         <div class="col" style="max-width: 200px">
           <a href="https://pilsetacilvekiem.lv">
-            <img src="https://pilsetacilvekiem.lv/wp-content/uploads/2018/10/pc-header-logo-retina.png" alt="Pilsēta cilvēkiem">
+            <img src="https://pilsetacilvekiem.lv/wp-content/uploads/2018/10/pc-header-logo-retina.png" alt="Pilsēta cilvēkiem" style="max-width: 200px">
           </a>
         </div>
         <div class="col">
-          <h1>Pārkāpumu iesniegumu būvētājs</h1>
+          <h1 class="pt-md-3">Pārkāpumu iesniegumu būvētājs</h1>
         </div>
       </section>
     </header>
     <main role="main" class="container-fluid">
-      <p class="alert alert-info" role="alert"><%= get_flash(@conn, :info) %></p>
-      <p class="alert alert-danger" role="alert"><%= get_flash(@conn, :error) %></p>
       <%= render @view_module, @view_template, assigns %>
     </main>
     <script type="text/javascript" src="<%= Routes.static_path(@conn, "/js/app.js") %>"></script>
