--- a/lib/protocol_builder_web/templates/protocol_generator/index.html.leex
+++ b/lib/protocol_builder_web/templates/protocol_generator/index.html.leex
@@ -1,16 +1,16 @@
 <div class="row">
   <div class="col-sm">
     <form phx-change="rerender">
-      <section class="border p-3 mb-3">
-        <h1>Iesnieguma informācija</h1>
+      <section class="border pt-3 pr-3 pl-3 mb-3">
+        <h4>Iesnieguma informācija</h4>
         <div class="form-group">
           <label for="protocol_date">Iesnieguma datums</label>
           <input type="text" class="form-control" name="protocol_date" id="protocol_date" placeholder="<%= default_value(:protocol_date) %>" value="<%= @protocol_date %>" />
         </div>
       </section>
 
-      <section class="border p-3 mb-3">
-        <h1>Personīgā informācija</h1>
+      <section class="border pt-3 pr-3 pl-3 mb-3">
+        <h4>Personīgā informācija</h4>
         <div class="form-group">
           <label for="person_name">Vārds/Uzvārds</label>
           <input type="text" class="form-control" name="person_name" id="person_name" placeholder="<%= default_value(:person_name) %>" value="<%= @person_name %>" />
@@ -28,8 +28,8 @@
           <input type="text" class="form-control" name="person_phone" id="person_phone" placeholder="<%= default_value(:person_phone) %>" value="<%= @person_phone %>" />
         </div>
       </section>
-      <section class="border p-3">
-        <h1>Pārkāpuma informācija</h1>
+      <section class="border pt-3 pr-3 pl-3 mb-3">
+        <h4>Pārkāpuma informācija</h4>
         <div class="form-group">
           <label for="infringement_date">Pārkāpuma datums</label>
           <input type="text" class="form-control" name="infringement_date" id="infringement_date" placeholder="<%= default_value(:infringement_date) %>" value="<%= @infringement_date %>" />
