date and time select

--- a/lib/protocol_builder_web/templates/protocol_generator/car-in-green-zone.html.leex
+++ b/lib/protocol_builder_web/templates/protocol_generator/car-in-green-zone.html.leex
@@ -10,9 +10,9 @@ Personas kods <%= raw highlight_empty_value(assigns, :person_code) %><br>
 <br>
 Šī gada
 <%= raw highlight_empty_value(assigns, :infringement_date) %>
-plkst.
+&nbsp;plkst.
 <%= raw highlight_empty_value(assigns, :infringement_time) %>
-<%= raw highlight_empty_value(assigns, :infringement_address) %>
+&nbsp;<%= raw highlight_empty_value(assigns, :infringement_address) %>
 zaļajā zonā bija novietota automašīna ar valsts numura zīmi
 <%= raw highlight_empty_value(assigns, :infringement_car_number) %>,
 pārkāpjot Rīgas pilsētas apstādījumu uzturēšanas un aizsardzības saistošo noteikumu 7.2 apakšpunktu. Lūdzu saukt vainīgo personu pie atbildības. Pielikumā pievienotas fotogrāfijas, kas apliecina šo faktu.
