--- a/lib/protocol_builder_web/templates/protocol_generator/car-on-sidewalk.html.leex
+++ b/lib/protocol_builder_web/templates/protocol_generator/car-on-sidewalk.html.leex
@@ -10,9 +10,9 @@ Personas kods <%= raw highlight_empty_value(assigns, :person_code) %><br>
 <br>
 Šī gada
 <%= raw highlight_empty_value(assigns, :infringement_date) %>
-plkst.
+&nbsp;plkst.
 <%= raw highlight_empty_value(assigns, :infringement_time) %>
-<%= raw highlight_empty_value(assigns, :infringement_address) %>
+&nbsp;<%= raw highlight_empty_value(assigns, :infringement_address) %>
 uz ietves bija novietota automašīna ar valsts numura zīmi
 <%= raw highlight_empty_value(assigns, :infringement_car_number) %>,
 pārkāpjot Ministru kabineta 2015.gada  2.jūnija noteikumu nr.279 “Ceļu satiksmes noteikumi”  121.9 apakšpunktu. Tādējādi izdarīts Latvijas Administratīvo pārkāpumu kodeksa  149.10 panta pirmās daļas 5.punktā paredzētais administratīvais pārkāpums. Lūdzu saukt vainīgo personu pie atbildības. Pielikumā pievienotas fotogrāfijas, kas apliecina šo faktu.
