--- a/lib/protocol_builder_web/templates/protocol_generator/index.html.leex
+++ b/lib/protocol_builder_web/templates/protocol_generator/index.html.leex
@@ -16,7 +16,7 @@
         </div>
         <div class="form-group">
           <label for="protocol_date">Iesnieguma datums</label>
-          <input type="text" class="form-control" name="protocol_date" id="protocol_date" placeholder="<%= default_value(:protocol_date) %>" value="<%= @protocol_date %>" />
+          <input type="date" class="form-control" name="protocol_date" id="protocol_date" placeholder="<%= default_value(:protocol_date) %>" value="<%= @protocol_date %>" />
         </div>
       </section>
 
@@ -43,11 +43,11 @@
         <h4>Pārkāpuma informācija</h4>
         <div class="form-group">
           <label for="infringement_date">Pārkāpuma datums</label>
-          <input type="text" class="form-control" name="infringement_date" id="infringement_date" placeholder="<%= default_value(:infringement_date) %>" value="<%= @infringement_date %>" />
+          <input type="date" class="form-control" name="infringement_date" id="infringement_date" placeholder="<%= default_value(:infringement_date) %>" value="<%= @infringement_date %>" />
         </div>
         <div class="form-group">
           <label for="infringement_time">Pārkāpuma laiks</label>
-          <input type="text" class="form-control" name="infringement_time" id="infringement_time" placeholder="<%= default_value(:infringement_time) %>" value="<%= @infringement_time %>" />
+          <input type="time" class="form-control" name="infringement_time" id="infringement_time" placeholder="<%= default_value(:infringement_time) %>" value="<%= @infringement_time %>" />
         </div>
         <div class="form-group">
           <label for="infringement_address">Pārkāpuma adrese</label>
