--- a/lib/protocol_builder_web/templates/protocol_generator/car-in-green-zone.html.leex
+++ b/lib/protocol_builder_web/templates/protocol_generator/car-in-green-zone.html.leex
@@ -8,14 +8,13 @@ Personas kods <%= raw highlight_empty_value(assigns, :person_code) %><br>
 <br>
 <div class="text-center">paskaidrojums</div>
 <br>
-Šī gada
 <%= raw highlight_empty_value(assigns, :infringement_date) %>
 &nbsp;plkst.
 <%= raw highlight_empty_value(assigns, :infringement_time) %>
-&nbsp;<%= raw highlight_empty_value(assigns, :infringement_address) %>
+&nbsp;adresē <%= raw highlight_empty_value(assigns, :infringement_address) %>
 zaļajā zonā bija novietota automašīna ar valsts numura zīmi
 <%= raw highlight_empty_value(assigns, :infringement_car_number) %>,
-pārkāpjot Rīgas pilsētas apstādījumu uzturēšanas un aizsardzības saistošo noteikumu 7.2 apakšpunktu. Lūdzu saukt vainīgo personu pie atbildības. Pielikumā pievienotas fotogrāfijas, kas apliecina šo faktu.
+pārkāpjot Rīgas pilsētas apstādījumu uzturēšanas un aizsardzības saistošo noteikumu 7.2 apakšpunktu. Lūdzu izvērtēt autovadītāja rīcības atbilstību Latvijas normatīvajos aktos noteiktajam. Pielikumā pievienotas fotogrāfijas, kas apliecina šo faktu.
 <br><br>
 <%= raw highlight_empty_value(assigns, :protocol_date) %> 
 <br>
